fixed a problem with the page overflowing the screen size

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,17 @@
+
 .App {
   text-align: center;
   display: flex;
   flex-direction: column;
   background-color: #001220;
   color: white;
-  width: 100vw;
-  height: auto;
 }
 
 .header {
   background-color: #001f36;
   color: white;
+  width: 100vw;
   height: 7vh;
-  width: 100%;
   position: relative;
   display: flex;
   align-items: center;
@@ -37,8 +36,8 @@
 
 #hero-background {
   object-fit: cover;
-  width: 100vw;
   height: 95vh;
+  width: 100%;
 }
 
 .hero-text {
@@ -101,6 +100,7 @@
   justify-content: center;
   padding: 40px;
   height: auto;
+  width: auto;
 }
 
 .portfolio-title {
@@ -125,16 +125,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 530px;
-  height: 600px;
+  width: 460px;
+  height: 500px;
   transition-property: transform box-shadow;
   transition-duration: 1s;
   transition-timing-function: ease-out;
   transition-delay: .25s;
+
 }
 
 .work-card:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
   box-shadow: 5px 2px 20px 2px #ffffff82;
 }
 
@@ -205,7 +206,7 @@
 }
 
 .icon-container {
-  width: 100%;
+  width: 90vw;
   height: 200px;
   padding: 30px;
   display: flex;
@@ -242,7 +243,7 @@
 
 .footer {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background-color: #f18078;
   color: black;
   display: flex;
@@ -253,7 +254,7 @@
 
 .form-box {
   height: 20vh;
-  width: 100vw;
+  width: 100;
   display: flex;
   justify-content: center;
   
@@ -312,5 +313,16 @@ textarea {
 
 .footer-icon:hover {
   transform: scale(1.2);
+}
+
+.submitBtn {
+  background-color: black;
+  color: white;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.submitBtn:hover {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
